Add user input for identification

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
     <h1>
         SignalR JavaScript Client
     </h1>
+
+    <!--<div id="divMessages" class="messages"></div>-->
+    <div class="input-zone">
+        <label id="userLabel" for="userInput">Username:</label>
+        <input id="userInput" class="input-zone-input" type="text" />
+        <button id="connectButton">Connect</button>
+    </div>
+
     <ul id="messageList"></ul>
 </body>
 </html>
