display amount of set connections

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
         SignalR TypeScript Client
     </h1>
 
+    <div>
+        <p id="statusText">Verbonden clients: 0</p>
+    </div>
+
     <ul id="messageList"></ul>
 </body>
 </html>
